--- a/src/main/resources/templates/students/student-update.html
+++ b/src/main/resources/templates/students/student-update.html
@@ -414,19 +414,18 @@
 
                         <div class="col-md-4">
                           <label class="form-label required-label">学校登録日</label>
-                          <input type="date" class="form-control" name="enrolledDate"
-                            th:value="${student.enrolledDate}" />
+                          <input type="date" class="form-control" name="enrolledDate" th:value="${student.enrolledDate}" />
                           <div class="text-danger" th:if="${#fields.hasErrors('enrolledDate')}"th:errors="*{enrolledDate}"></div>
                         </div>
 
                         <div class="col-md-4">
                           <label class="form-label">授業料支払予定日</label>
-                          <input type="date" class="form-control" th:field="*{schedulePaymentTutionDate}" />
+                          <input type="date" class="form-control" name="schedulePaymentTutionDate" th:value="*{student.schedulePaymentTutionDate}" />
                         </div>
 
                         <div class="col-md-4">
                           <label class="form-label">授業料支払実績日</label>
-                          <input type="date" class="form-control" th:field="*{actualTutionPaymentDate}" />
+                          <input type="date" class="form-control" name="actualTutionPaymentDate" th:value="*{student.actualTutionPaymentDate}" />
                         </div>
 
                         <div class="col-12">
